Fixed z-index nav vs box-calc
also fixed all media queries incl 640

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header {
     display: inline-flex;
     justify-content: space-between;
     position: fixed;
+    z-index:3;
 }
 
 header a, footer a {
@@ -47,8 +48,9 @@ header h3{
 }
 
 nav {
-    z-index: 5;
+    position: relative;
     float: right;
+    z-index: 3;
     background-color: rgb(87, 87, 87);
     height: 20em;
     width: 12em;
@@ -74,8 +76,6 @@ nav ul li {
     margin-top: .5em;
     cursor: pointer;
     background-color: rgb(87, 87, 87);
-    z-index: 0;
-    
 }
 
 .after-header {
